[package]
name = "rust_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
csv_db = "0.3.0"
itertools = "0.14.0"
rand = "0.9.2"
reqwest = "0.13.2"
scraper = "0.25.0"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.18"
